2005-04-19  David S. Miller  <davem@davemloft.net>

	* elfxx-sparc.c: New file.
	* elfxx-sparc.h: New file.
	* Makefile.in (BFD32_BACKENDS): Add elfxx-sparc.lo
	(BFD32_BACKENDS_CFILES): Add elfxx-sparc.c
	(elfxx-sparc.lo): New rule.
	(elf32-sparc.lo): Add elfxx-sparc.h dependency.
	(elf64-sparc.lo): Likewise.
	* configure.in (bfd_elf32_sparc_vec): Add elfxx-sparc.lo
	(bfd_elf64_sparc_vec): Likewise.
	* configure: Regenerate.
	* elf32-sparc.c: Remove common code now in elfxx-sparc.c
	* elf64-sparc.c: Likewise, also use elf64_sparc_*() naming
	which is more consistent with elf32-sparc.c

2005-04-19  Daniel Jacobowitz  <dan@codesourcery.com>

	* elfxx-mips.c (struct mips_elf_link_hash_entry): Update comment.
	(mips_elf_create_local_got_entry): Check h->root.forced_local.

2005-04-19  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_check_relocs): Don't bother with
	dynamic relocs in non-SEC_ALLOC sections.
	(ppc_elf_gc_sweep_hook): Likewise.
	(ppc_elf_relax_section): Likewise.
	(ppc_elf_relocate_section): Likewise.

2005-04-18  Nick Clifton  <nickc@redhat.com>

	* aix5ppc-core.c (xcoff64_core_p): Fix compile time warning
	assigning a value to return_value.

2005-04-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR 855
	* elf.c (_bfd_elf_copy_private_section_data): Don't copy linker
	created group data.

2005-04-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR 855
	* elf.c (setup_group): Properly handle zero group count.

2005-04-17  Mark Kettenis  <kettenis@gnu.org>

	* som.c (hppa_som_reloc, som_mkobject, som_is_space)
	(som_is_subspace, compare_subspaces, som_compute_checksum)
	(som_build_and_write_symbol_table, som_slurp_symbol_table): New
	protoypes.
	(hppa_som_reloc, compare_syms, compare_subspaces)
	(som_print_symbol, som_get_section_contents)
	(som_set_section_contents): Remove space after 'void *'.
	(som_bfd_print_private_bfd_data): Use %lx to print longs.
	(som_bfd_merge_private_bfd_data)
	(som_bfd_copy_private_header_data, som_bfd_set_private_flags): New